# html2md

./: .codedocs  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG_8md.html  CMakeLists.txt  CODE_OF_CONDUCT.md  MANIFEST.in  Package.swift  README.md  README_8md.html  _config.yml  annotated.html  annotated_dup.js  classes.html  classhtml2md_1_1Converter-members.html  classhtml2md_1_1Converter.html  classhtml2md_1_1Converter.js  dir_000002_000001.html  dir_000003_000001.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7837fde3ab9c1fb2fc5be7b717af8d79.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  example.cpp  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  html2md.hpp  (+60 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml  website.yml  wheels.yml
cli/: main.cpp
cmake/: Packaging.cmake
docs/: Doxyfile  index.md
docs/doxygen-awesome-css/doxygen-custom/: header.html
gui/: CMakeLists.txt
include/: html2md.h  markdownFormatter.h
js/: bindings.cpp
objc/: html2md_objc.mm
objc/include/: html2md_objc.h
python/: CMakeLists.txt  README.md  bindings.cpp  setup.py
scripts/: clang-format.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  (+6 more)
src/: html2md.cpp  table.cpp
tests/: CMakeLists.txt  README.md  benchmark.cpp  blockquote.md  breaks.md  code.md  formating.md  links.md  lists.md  main.cpp  tables.md  test_advanced.py
tests/python/: test_advanced.py  test_html_symbol_conversions.py  test_option_escape.py
